--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +7,7 @@
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
 }
+
 header {
   position: fixed;
   width: 100%;
@@ -17,6 +19,7 @@ header {
   background: #111;
   z-index: 1000;
 }
+
 header .logo {
   color: #fff;
   font-size: 30px;
@@ -24,15 +27,18 @@ header .logo {
   letter-spacing: 2px;
   font-weight: 700;
 }
+
 header ul {
   position: relative;
 
   display: flex;
 }
+
 header ul li {
   line-height: relative;
   list-style: none;
 }
+
 header ul li a {
   position: relative;
   padding: 5px 15px;
@@ -41,30 +47,34 @@ header ul li a {
   text-decoration: none;
   cursor: pointer;
 }
+
 header ul li a.active,
 header ul li a:hover {
   background: #205aff;
 }
+
 .toggle {
   display: none;
 }
+
 #welcome-section {
   height: 100vh;
 }
-.left-content{
-    max-width: 500px;
+
+.left-content {
+  max-width: 500px;
 }
 
-.info{  
-    margin-top: 20px;
-    
+.info {
+  margin-top: 20px;
+
 }
 
 
-.caButtons{
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
+.caButtons {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
 }
 
 .chat {
@@ -74,6 +84,12 @@ header ul li a:hover {
   background: #111;
   padding: 10px 10px;
   font-weight: 600;
+}
+
+.chat:hover {
+  background: white;
+  color: #111;
+  border: #111 solid 4px;
 }
 
 .about {
@@ -86,6 +102,24 @@ header ul li a:hover {
   margin-left: 8px;
 }
 
+.about:hover {
+  background: #111;
+  color: white;
+  border: white 5px solid;
+}
+
+.first-image {
+  border-radius: 19px;
+  width: 350px;
+  height: 350px;
+  transition: width 3s, height 2s;
+}
+
+.first-image:hover {
+  width: 400px;
+  height: 400px;
+}
+
 section {
   position: relative;
   display: flex;
@@ -95,77 +129,82 @@ section {
   padding: 150px 100px 100px;
 }
 
-.profileCard{
-    background-color: #fff;
-    border-radius: 18px;
-    border-radius: 18px;
-    box-shadow: 1px 1px 8px 0 grey;
-    padding: 20px 0 20px 50px;
-    margin-top: 20px;
-    width: 100%;
-    color: #111;
+.profileCard {
+  background-color: #fff;
+  border-radius: 18px;
+  border-radius: 18px;
+  box-shadow: 1px 1px 8px 0 grey;
+  padding: 20px 0 20px 50px;
+  margin-top: 20px;
+  width: 100%;
+  color: #111;
 }
 
-.icon{
-    height: 20px;
-    width: 20px;
+.icon {
+  height: 20px;
+  width: 20px;
 }
 
-#projects{
+#projects {
   flex-direction: column !important;
-  
+
 }
 
-.profileTitle{
-    justify-content: flex-start;
-    margin-top: 10px;
+.profileTitle {
+  justify-content: flex-start;
+  margin-top: 10px;
 }
 
-.project{
-    min-height: 100vh;
-    background: #111;
-    color: white;
-    padding: 150px 100px 100px;
+.project {
+  min-height: 100vh;
+  background: #111;
+  color: white;
+  padding: 150px 100px 100px;
 }
 
-.profileItem{
-    display: flex;
-    flex-direction: row;
-    margin-top: 10px;   
+.profileItem {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
 }
 
-.itemDescription{
-    margin-left: 10px;
+.itemDescription {
+  margin-left: 10px;
 }
 
-.strong{
-    font-weight: 600;
+.strong {
+  font-weight: 600;
 }
 
-.experienceDetails{
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    padding: 10px 10px 10px 10px;
+.experienceDetails {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 10px 10px 10px 10px;
 }
-.experienceAddress{
-    width: 400px;
+
+.experienceAddress {
+  width: 400px;
 }
-.experienceDescription{
-    width: 400px;
+
+.experienceDescription {
+  width: 400px;
 }
 
 section img {
   max-width: 350px;
   margin-left: 30px;
 }
+
 section h1 {
   font-size: 2.5em;
   text-transform: uppercase;
 }
+
 section p {
   font-size: 18px;
 }
+
 section:nth-child(odd) {
   position: relative;
   justify-content: center;
@@ -182,19 +221,20 @@ section:nth-child(odd) {
     align-items: center;
     display: flex;
   }
-  
-.project{
-  min-height: 100vh;
-  background: #111;
-  color: white;
-  padding: 100px 50px 50px;
-  font-size: 12px;  
-}
+
+  .project {
+    min-height: 100vh;
+    background: #111;
+    color: white;
+    padding: 100px 50px 50px;
+    font-size: 12px;
+  }
 
   section img {
     margin: 5px 0 0;
     max-width: 70%;
   }
+
   header ul {
     position: absolute;
     top: -100%;
@@ -210,15 +250,18 @@ section:nth-child(odd) {
     flex-direction: column;
     transform: translateY(-100%);
   }
+
   header.active ul {
     opacity: 1;
     top: 80px;
     transform: translateY(0);
   }
+
   header ul li a {
     margin: 5px 0;
     font-size: 24px;
   }
+
   .toggle {
     display: block;
     position: relative;
@@ -226,6 +269,7 @@ section:nth-child(odd) {
     height: 30px;
     cursor: pointer;
   }
+
   .toggle:before {
     content: "";
     position: absolute;
@@ -237,6 +281,7 @@ section:nth-child(odd) {
     box-shadow: 0 10px 0 #fff;
     transition: 0.5s;
   }
+
   .toggle:after {
     content: "";
     position: absolute;
@@ -247,11 +292,13 @@ section:nth-child(odd) {
     z-index: 1;
     transition: 0.5s;
   }
+
   header.active .toggle:before {
     top: 14px;
     transform: rotate(45deg);
     box-shadow: 0 0 0 #fff;
   }
+
   header.active .toggle:after {
     bottom: 14px;
     transform: rotate(-45deg);
@@ -259,7 +306,4 @@ section:nth-child(odd) {
   }
 }
 
-@media (max-width: 992px) {
-
-
-}
+@media (max-width: 992px) {}
